--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Distribuciones_continuas.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Distribuciones_continuas.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Archivos_Generales/Imagenes/Péndulo.jpg\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: [Pexels](https://www.pexels.com/es-es/foto/cuna-de-gray-newton-en-fotografia-de-primer-plano-60582/)\n",
+    "\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <span style=\"color:#4361EE\">Introducción</span>"
    ]
   },
@@ -18,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En esta lección se introducen las distribuciones de probabilidad continuas. Además se introducen los conceptos de información en distribuciones continuas y la entropía diferencial.\n",
+    "En esta lección se introducen las distribuciones de probabilidad continuas. Además, se introducen los conceptos de información en distribuciones continuas y la entropía diferencial.\n",
     "\n",
     "Al empezar se introduce el concepto de variable aleatoria continua y la distribución normal. Si no recuerda el concepto de integral de una función en un intervalo, puede imaginar que una integral es aproximadamente un promedio de los valores de la función en un determinado intervalo."
    ]
@@ -51,7 +67,7 @@
    "source": [
     "Supongamos que se mide con una herramienta de precisión el diámetro de la cabeza de un tornillo salido de un proceso de producción. Es conocido que cada tornillo producido puede tener pequeñas diferencias de tamaño. Esto se debe en general a la forma como cada tornillo es procesado. Las máquinas que los producen por lo general pierden precisión por el uso. \n",
     "\n",
-    "Otro ejemplo menos preciso pero más cercano a nosotros es medir la estatura de las personas. En este caso los instrumentos son mucho menos precisos."
+    "Otro ejemplo menos preciso, pero más cercano a nosotros es medir la estatura de las personas. En este caso los instrumentos son mucho menos precisos."
    ]
   },
   {
@@ -73,9 +89,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "Si se define $X$ como la medida en cada caso, es claro que $X$ es una variable  aleatoria, puesto que al realizar los experimentos (en este caso las mediciones), no se puede predecir con total precisión, cual será el valor medido en cada experimento. \n",
+    "Si se define $X$ como la medida en cada caso, es claro que $X$ es una variable aleatoria, puesto que al realizar los experimentos (en este caso las mediciones), no se puede predecir con total precisión, cual será el valor medido en cada experimento. \n",
     "\n",
-    "Por otro lado $X$ tiene una característica diferente a las variables aleatorias discretas estudiadas con anterioridad. Sus posibles valores ahora no pueden enumerarse. Dentro de un rango razonable es posible obtener como resultado cualquier número real dentro de ese rango. En este caso  se dice que la variable aleatoria es continua.\n",
+    "Por otro lado $X$ tiene una característica diferente a las variables aleatorias discretas estudiadas con anterioridad. Sus posibles valores ahora no pueden enumerarse. Dentro de un rango razonable es posible obtener como resultado cualquier número real dentro de ese rango. En este caso se dice que la variable aleatoria es continua.\n",
     "\n",
     "Para las variables aleatorias continuas no existe función de probabilidad, debido a que ahora para cada valor posible no es posible asociar una probabilidad diferente de cero. En este caso se toman intervalos tan grandes o pequeños como sea posible y a estos intervalos se les asigna una medida de probabilidad."
    ]
@@ -93,13 +109,13 @@
    "source": [
     "La función de densidad de probabilidad, en adelante función de densidad, es el homólogo de la función de probabilidad. Se trata entonces de una función integrable no negativa, en donde el área bajo la curva es 1.\n",
     "\n",
-    "El ejemplo más simple es la distribución uniforme en el intervalos $[0,1]$. En este caso la función de densidad es $g(x)=1$. Note que en este caso se tiene que\n",
+    "El ejemplo más simple es la distribución uniforme en el intervalo $[0,1]$. En este caso la función de densidad es $g(x)=1$. Note que en este caso se tiene que\n",
     "\n",
     "$$\n",
     "\\int_0^1 g(x)dx = \\int_0^1 1 dx= x|_{x=0}^{x=1} = 1-0 =1.\n",
     "$$\n",
     "\n",
-    "Esta distribución se llama uniforme porque cada subintervalo de $[0,1]$ tiene exactamente la misma probabilidad. Por ejemplo los intervalos $[0.1,0.3]$ y $[0.5,0.7]$ tiene cada uno medida de probabilidad 0.2. En este caso, la medida de probabilidad coincide con la medida de longitud que usamos a diario para medir longitudes, como por ejemplo, el frente de una casa."
+    "Esta distribución se llama uniforme porque cada subintervalo de $[0,1]$ tiene exactamente la misma probabilidad. Por ejemplo, los intervalos $[0.1,0.3]$ y $[0.5,0.7]$ tiene cada uno medida de probabilidad 0.2. En este caso, la medida de probabilidad coincide con la medida de longitud que usamos a diario para medir longitudes, como por ejemplo, el frente de una casa."
    ]
   },
   {
@@ -116,17 +132,17 @@
     "Las definiciones en este caso son generalizaciones a las estudiadas para el caso discreto, cambiado los promedios por integrales. Entonces se tiene que si $X$ es una variable aleatoria continua con densidad dada por $g(x)$, se tiene que la esperanza matemática (o valor esperado) y la varianza son dadas por\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\mathbb{E}[X] &= \\mu_X=\\int xg(x)dx\\\\\n",
     "\\text{Var}[X] &= \\int( x - \\mu_X)^2g(x)dx\\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "Los límites de las integrales dependen del tipo de distribución. De acuerdo con lo mencionado en la introducción, en relación con el concepto de integral, podemos conservar las interpretaciones de la media y la varianza del caso discreto.\n",
     "\n",
     "La media es aproximadamente el valor promedio de la variable aleatoria que se obtiene si se realiza muchas veces el experimento aleatorio y se calcula la medida dada por la variable aleatoria.\n",
     "\n",
-    "Por otro lado la varianza mide el grado de predictibilidad de la variable aleatoria. Entonces, aunque no son conceptos exáctamente equivalentes podemos mantener las interpretaciones. Lo mismo ocurre con los conceptos de la teoría de información."
+    "Por otro lado, la varianza mide el grado de predictibilidad de la variable aleatoria. Entonces, aunque no son conceptos exactamente equivalentes podemos mantener las interpretaciones. Lo mismo ocurre con los conceptos de la teoría de información."
    ]
   },
   {
@@ -164,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La distribución normal es la distribución más importante de toda la estadística. Esto no solamente se debe  a su aplicación en gran cantidad de problemas, sino porque es la distribución límite de muchas sucesiones de distribuciones que aparecen con frecuencia.  No entraremos en detalles técnicos. Solamente vamos a indicar la expesión de la función de densidad y veremos como calcular algunas probabilidades.\n",
+    "La distribución normal es la distribución más importante de toda la estadística. Esto no solamente se debe a su aplicación en gran cantidad de problemas, sino porque es la distribución límite de muchas sucesiones de distribuciones que aparecen con frecuencia.  No entraremos en detalles técnicos. Solamente vamos a indicar la expresión de la función de densidad y veremos como calcular algunas probabilidades.\n",
     "\n",
     "La densidad de la distribución normal tiene la expresión:\n",
     "\n",
@@ -179,10 +195,10 @@
    "source": [
     "La expresión es un poco intimidante, pero su uso con la ayuda de Python es muy fácil. Vamos primero a dar las expresiones para la media y la varianza de la distribución normal\n",
     "\n",
-    "1. Los parámetros de la distribución  normal son $\\mu$ y $\\sigma^2$.\n",
+    "1. Los parámetros de la distribución normal son $\\mu$ y $\\sigma^2$.\n",
     "2. La función $g(x)$ es simétrica alrededor de $\\mu_X$.\n",
     "\n",
-    "Además si $X$ es una variable aleatoria con distibución normal, que escribiremos $X\\sim \\mathcal{N}(\\mu,\\sigma^2)$, entonces\n",
+    "Además si $X$ es una variable aleatoria con distribución normal, que escribiremos $X\\sim \\mathcal{N}(\\mu,\\sigma^2)$, entonces\n",
     "\n",
     "3. $\\mathbb{E}[X] = \\mu$\n",
     "4. $\\text{Var}[X] = \\sigma^2$\n",
@@ -547,7 +563,7 @@
     "Entropia_{normal} = \\tfrac{1}{2} \\ln(2\\pi e\\sigma^2 )\n",
     "$$\n",
     "\n",
-    "Se observa entonces que tanto la varianza $\\sigma^2$ como la entropía $\\tfrac{1}{2} \\ln(2\\pi e\\sigma^2) $ son funciones crecientes. A mayor valor de $\\sigma$, mayor entropía y viceversa. Así una variable aleatoria que tiene distribución normal es mas predecible entre menor es su varianza.\n",
+    "Se observa entonces que tanto la varianza $\\sigma^2$ como la entropía $\\tfrac{1}{2} \\ln(2\\pi e\\sigma^2) $ son funciones crecientes. A mayor valor de $\\sigma$, mayor entropía y viceversa. Así una variable aleatoria que tiene distribución normal es más predecible entre menor es su varianza.\n",
     "\n",
     "La figura muestra la entropía y la varianza en función de $\\sigma$ para la familia normal."
    ]
