--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Variables_Aleatorias.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Variables_Aleatorias.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/barplot.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Estadistica/Imagenes/barplot.png\" width=\"600\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -62,7 +62,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Estadistica/Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\"> Dos datos de seis caras</p>\n",
@@ -1130,7 +1130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1146,7 +1146,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
