--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Conceptos_Basicos.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Conceptos_Basicos.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolas_subconjuntos.png\" width=\"700\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Estadistica/Imagenes/prob_bolas_subconjuntos.png\" width=\"700\" height=\"500\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -57,9 +57,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente gráfica representa un ejemplo de un `espacio muestral`, el cual denotaremos como $\\mathcal{M}$. Cada objeto dentro de la bolsa es un elemento del espacio muestral. Esto significa que este espacio muestral tiene $N=20$ elementos. Se supone que cada individuo puede identificarse de manera única. En este ejemplo hemos usado  un identificador $1,2,\\ldots,20$, para cada uno de los elementos del espacio muestral. \n",
+    "La siguiente gráfica representa un ejemplo de un `espacio muestral`, el cual denotaremos como $\\mathcal{M}$. Cada objeto dentro de la bolsa es un elemento del espacio muestral. Esto significa que este espacio muestral tiene $N=20$ elementos. Se supone que cada individuo puede identificarse de manera única. En este ejemplo hemos usado un identificador $1,2,\\ldots,20$, para cada uno de los elementos del espacio muestral. \n",
     "\n",
-    "Adicionalmente,  cada individuo tiene un atributo de color. Hay tres colores diferentes: rojo, azul y gris."
+    "Adicionalmente, cada individuo tiene un atributo de color. Hay tres colores diferentes: rojo, azul y gris.\n"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolsa_bolas.png\" width=\"300\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Estadistica/Imagenes/prob_bolsa_bolas.png\" width=\"300\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Ejemplo de Espacio Muestral M</p>\n",
@@ -107,7 +107,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolas_subconjuntos.png\" width=\"600\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Estadistica/Imagenes/prob_bolas_subconjuntos.png\" width=\"600\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Ejemplos de eventos del Espacio Muestral M</p>\n",
@@ -126,20 +126,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La teoría de probabilidad se creó para poder medir los subconjuntos de una espacio muestral. El concepto de medida en cada caso está asociado a la naturaleza del experimento que se desea modelar (representar de manera abstracta).\n",
+    "La teoría de probabilidad se creó para poder medir los subconjuntos de un espacio muestral. El concepto de medida en cada caso está asociado a la naturaleza del experimento que se desea modelar (representar de manera abstracta).\n",
     "\n",
     "En el ejemplo de las bolas presentado arriba, la medida que usaremos será la proporción entre el número de elementos de un evento y el número de elementos del espacio muestral $M$. \n",
     "\n",
     "Esto significa que:\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\text{Prob}[\\text{azul}] &= 5/20\\\\\n",
     "\\text{Prob}[\\text{gris}] &= 8/20\\\\\n",
     "\\text{Prob}[\\text{rojo}] &= 7/20\\\\\n",
     "\\text{Prob}[\\text{pares}] &= 10/20\\\\\n",
     "\\text{Prob}[\\text{impares}] &= 10/20\\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "Por favor verifique estos valores. Observe además que $\\text{Prob}[\\mathcal{M}] = 1$."
@@ -229,11 +229,11 @@
     "Además se tiene que:\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\text{azul}\\cap \\text{rojo} &= \\emptyset\\\\\n",
     "\\text{azul}\\cap \\text{gris} &= \\emptyset\\\\\n",
     "\\text{gris}\\cap \\text{rojo} &= \\emptyset\\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "Se dice en esta situación que los conjuntos son `mutuamente excluyentes`.  De acuerdo con la regla aditiva tenemos que:\n",
@@ -445,7 +445,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Estadistica/Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -461,7 +461,7 @@
     "2. Calcule la probabilidad de obtener 2,3,...,12.\n",
     "3. Calcule la probabilidad de obtener un número par.\n",
     "4. Compruebe que la probabilidad de obtener 5 en el dado blanco es 1/5 y que este evento es independiente del valor obtenido en el dado negro.\n",
-    "4. Escriba un programa en Python que construya un tensor de dimensión 2 y que contenga los 36 posibles resultados. Consulte  sobre como se hace un ciclo `for` en Python."
+    "4. Escriba un programa en Python que construya un tensor de dimensión 2 y que contenga los 36 posibles resultados. Consulte  sobre cómo se hace un ciclo `for` en Python."
    ]
   },
   {
@@ -482,7 +482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -498,7 +498,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
