--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Var_Prob_conjunta.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Var_Prob_conjunta.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Archivos_Generales/Imagenes/Dardo.jpg\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: [Pexels](https://www.pexels.com/es-es/foto/dardo-rojo-y-blanco-en-tablero-de-dardos-262438/)\n",
+    "\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <span style=\"color:#4361EE\">Introducción</span>"
    ]
   },
@@ -55,20 +71,20 @@
     "Recuerde que obtuvimos que $\\mathbb{E}[X]=1.8$.  Además se tiene que $\\text{Var}[X]=0.72$ y $\\sigma_X = 0.849$. Efectivamente tenemos que\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "X &= \\{0, 1, 2, 3\\},\\\\\n",
     "p &= \\{0.064, 0.288, 0.432, 0.216\\},\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "y\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\mathbb{E}[X] &= 0 \\times 0.064 + 1\\times 0.288 + 2\\times 0.432 + 3 \\times 0.216 = 1.8,\\\\\n",
     "\\text{Var}[X] & = (0-1.8)^2 \\times 0.064 + (1-1.8)^2 \\times 0.288 + (2-1.8)^2 \\times 0.432 + (3-1.8)^2 \\times 0.216 = 0.72\\\\\n",
     "\\sigma_X &=  \\sqrt{\\text{Var}[X]} = 0.849\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n"
    ]
@@ -211,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El concepto de correlación está completamente asociado a la funcion de distribución conjunta de dos variables aleatorias. Esencialmente, la correlación mide como cambian simultáneamente las dos variables aleatorias. Supongamos que $X$ y $Y$ son variables aleatorias definidas sobre el mismo espacio muestral como en el ejemplo anterior.\n",
+    "El concepto de correlación está completamente asociado a la función de distribución conjunta de dos variables aleatorias. Esencialmente, la correlación mide como cambian simultáneamente las dos variables aleatorias. Supongamos que $X$ y $Y$ son variables aleatorias definidas sobre el mismo espacio muestral como en el ejemplo anterior.\n",
     "\n",
     "Además supongamos que la media y la desviación estándar de cada variable se denotan como $\\mu_X$, $\\sigma_X$ y $\\mu_Y$ y $\\sigma_Y$ respectivamente. Entonces se tiene que la correlación entre las dos variables aleatorias es dada por:\n",
     "\n",
@@ -551,14 +567,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nota aclaratoria"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Debido a que en la codificación *one-hot*, solamente una componente del vector es uno  y el recto cero, en la expresión anterior solamente un sumando es diferente de cero. Lo hemos escrito de esta forma, para mantener sencilla la notación."
+    "```{admonition} Nota Aclaratoria\n",
+    ":class: \n",
+    "Debido a que en la codificación *one-hot*, solamente una componente del vector es uno  y el recto cero, en la expresión anterior solamente un sumando es diferente de cero. Lo hemos escrito de esta forma, para mantener sencilla la notación.\n",
+    "```"
    ]
   },
   {
@@ -584,14 +596,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nota aclaratoria"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "En las API's para resde neurononales la entropía cruzada es el método preferido en modelos de clasificación. En esas API's como `Keras` es posible definir la entropía cruzada sin reducir al promedio, sino a la suma de las entropías de cada muestra. Sin embargo  para efectos de comparación es mejor tomar el promedio. "
+    "```{admonition} Nota Aclaratoria\n",
+    ":class: \n",
+    "En las API's para resde neurononales la entropía cruzada es el método preferido en modelos de clasificación. En esas API's como `Keras` es posible definir la entropía cruzada sin reducir al promedio, sino a la suma de las entropías de cada muestra. Sin embargo  para efectos de comparación es mejor tomar el promedio. \n",
+    "```"
    ]
   },
   {
@@ -612,18 +620,11 @@
     "$$\n",
     "corresponde a la log verosimilutud de un modelo de clasificación clásico con $\\hat{y}_i = \\text{net}_{\\theta}(x_i)$."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -639,7 +640,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
