--- a/Fundamentacion_Matematica/Cuadernos/am_intro_regresion.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/am_intro_regresion.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Archivos_Generales/Imagenes/Patrones.jpg\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: [Pexels: Iva Muškić](https://www.pexels.com/es-es/foto/textil-estampado-colmena-gris-y-negro-691710/)\n",
+    "\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <span style=\"color:#4361EE\">Introducción</span>"
    ]
   },
@@ -42,9 +58,9 @@
     "\n",
     "La curva azul muestra la función $y= 0.8431 x + 6.339$, la cual corresponde al modelo lineal entrenado para este conjunto de datos. El entrenamiento fue desarrollado usando la función *polyfit()* de numpy.\n",
     "\n",
-    "El área sombreada corresponde a lo que los estadísticos llaman bandas de confianza. No entraremos en detalles, pero se espera que la mayor parte de los datos de entranamiento y validación queden dentro de tales bandas. Esta es una medida de la calidad de la máquina de aprendizaje. El gráfico muestra que las cosas no salieron muy bien. Esto es porque al parecer el comportamineto de los datos que no es lineal. \n",
+    "El área sombreada corresponde a lo que los estadísticos llaman bandas de confianza. No entraremos en detalles, pero se espera que la mayor parte de los datos de entrenamiento y validación queden dentro de tales bandas. Esta es una medida de la calidad de la máquina de aprendizaje. El gráfico muestra que las cosas no salieron muy bien. Esto es porque al parecer el comportamiento de los datos que no es lineal. \n",
     "\n",
-    "Los datos de entrenamiento aparecen de color café y los datos de validación en color verde."
+    "Los datos de entrenamiento aparecen de color café y los datos de validación en color verde.\n"
    ]
   },
   {
@@ -347,16 +363,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por otro lado, el modelo cuadrático construido previamente  tiene $ECM=3.05227$, pero este parece generalizar mejor. \n",
+    "Por otro lado, el modelo cuadrático construido previamente tiene $ECM=3.05227$, pero este parece generalizar mejor. \n",
     "\n",
-    "Esto significa que cuando se tiene más de una máquina de aprendizaje candidata para nuestro datos, no es un criterio suficiente el del error cuadrático medio. Ambas deben generalizar bien. \n",
+    "Esto significa que cuando se tiene más de una máquina de aprendizaje candidata para nuestros datos, no es un criterio suficiente el del error cuadrático medio. Ambas deben generalizar bien. \n",
     "\n",
     "De momento puede decidirse por una máquina que tenga un *ECM razonable* para nuestros datos siempre que generalice bien.\n",
     "\n",
     "\n",
-    "Esta revisión permite establecer que el modelo polinomial ajusta sin error los datos de entrenamiento, pero no generaliza bien. En general esto se notará porque el ECM en los datos de validación resulta mas grande que en los datos de entrenamiento.\n",
+    "Esta revisión permite establecer que el modelo polinomial ajusta sin error los datos de entrenamiento, pero no generaliza bien. En general esto se notará porque el ECM en los datos de validación resulta más grande que en los datos de entrenamiento.\n",
     "\n",
-    "Este fenómeno se conoce como **sobreajuste**. Entonces una máquina de aprendizaje está sobre ajustada, cuando predice muy bien una parte de los datos de entrenamiento (pudiendose ser a todo el conjunto de entrenamiento), pero generaliza mal, lo cual puede medirse con datos de validación.\n",
+    "Este fenómeno se conoce como **sobreajuste**. Entonces una máquina de aprendizaje está sobre ajustada, cuando predice muy bien una parte de los datos de entrenamiento (pudiéndose ser a todo el conjunto de entrenamiento), pero generaliza mal, lo cual puede medirse con datos de validación.\n",
     "\n"
    ]
   },
@@ -409,13 +425,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta situación no es única de este conjunto de datos. En realidad es en buena parte la causante del problema de sobreajuste. \n",
+    "Esta situación no es única de este conjunto de datos. En realidad, es en buena parte la causante del problema de sobreajuste. \n",
     "\n",
-    "Es posible resolver este problema recurriendo a técnicas de penalización en el proceso de optimización, conocidads como **técnicas de regularización**.\n",
+    "Es posible resolver este problema recurriendo a técnicas de penalización en el proceso de optimización, conocidas como **técnicas de regularización**.\n",
     "\n",
     "El asunto aquí es bastante sencillo. La idea central es introducir términos adicionales en la función de pérdida que será optimizada. \n",
     "\n",
-    "Las técnicas de regularización por lo general se basan en restricciones impuestas sobre el vector de pesos $\\mathbf{w}$ que evitan que este crezca demasiado. Esas restricciones se introducen usando distintos tipos de norma. Y en ocasiones se incluye más de una. Revisamos aquí las técnicas $L1$ y $L2$."
+    "Las técnicas de regularización por lo general se basan en restricciones impuestas sobre el vector de pesos $\\mathbf{w}$ que evitan que este crezca demasiado. Esas restricciones se introducen usando distintos tipos de norma. Y en ocasiones se incluye más de una. Revisamos aquí las técnicas $L1$ y $L2$.\n"
    ]
   },
   {
@@ -654,15 +670,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:#4CC9F0\">Notas</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```{admonition} Notas\n",
+    ":class: \n",
     "1. Observe además que hemos encontrado una nueva función de pérdida diferente al ECM. Sin embargo, si la distribución asociada en el problema es la Normal, se llega a la misma función de pérdida. Por eso es bastante usual la utilización del ECM como función de pérdida en los problemas de regresión en el área del aprendizaje de máquinas.\n",
-    "2. Puede verificarse que la optimización de $\\mu$ y $\\sigma$ puede hacerse de forma independiente en el caso Normal. Generalmente, el parámetro $\\sigma^2$ no se incluye en los modelos de aprendizaje profundo. Principalmente porque el ECM no depende de ninguna distribución particular."
+    "2. Puede verificarse que la optimización de $\\mu$ y $\\sigma$ puede hacerse de forma independiente en el caso Normal. Generalmente, el parámetro $\\sigma^2$ no se incluye en los modelos de aprendizaje profundo. Principalmente porque el ECM no depende de ninguna distribución particular.\n",
+    "```"
    ]
   },
   {
@@ -725,7 +737,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/regression_curve.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Matematicas/Imagenes/regression_curve.png\" width=\"500\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Ejemplo de una curva de regresión: y(x) = E[ t | x ] </p>\n",
@@ -797,12 +809,9 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/predictive_2.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
-    "</center>\n",
-    "<figcaption>\n",
-    "<p style=\"text-align:center\">Distribución predictiva: $p(t|\\widehat{\\boldsymbol{w}},\\widehat{\\beta}) = \\mathcal{N}(t|y(x,\\widehat{\\boldsymbol{w}}),\\widehat{\\beta}^{-1})$</p>\n",
-    "</figcaption>\n",
-    "</figure>"
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Matematicas/Imagenes/predictive_2.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
+    "\n",
+    "Distribución predictiva: $p(t|\\widehat{\\boldsymbol{w}},\\widehat{\\beta}) = \\mathcal{N}(t|y(x,\\widehat{\\boldsymbol{w}}),\\widehat{\\beta}^{-1})$ </p>\n"
    ]
   }
  ],
