--- a/Fundamentacion_Matematica/Cuadernos/mod_Modelamiento.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/mod_Modelamiento.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_numbers.png\" height='200' width='200' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Matematicas/Imagenes/mod_numbers.png\" height='200' width='200' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -290,9 +290,9 @@
     "\n",
     "En otras palabras, tenemos la siguiente ecuación diferencial:\n",
     "\n",
-    "$$\\begin{equation}\n",
+    "$$\\begin{equation*}\n",
     "\\frac{d^2 x}{dt}=\\frac{F(t,x,v)}{m}\n",
-    "\\end{equation}$$\n",
+    "\\end{equation*}$$\n",
     "\n",
     "Que quiere decir que la **Fuerza ejercida en un objeto puede depender tanto del tiempo como de la posición y de la velocidad**.\n",
     "\n",
@@ -514,7 +514,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_datos.jpg\" height='400' width='600' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Matematicas/Imagenes/mod_datos.jpg\" height='400' width='600' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -527,7 +527,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_reg1.jpg\" height='400' width='600' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Matematicas/Imagenes/mod_reg1.jpg\" height='400' width='600' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -540,7 +540,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_reg2.jpg\" height='400' width='600' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Matematicas/Imagenes/mod_reg2.jpg\" height='400' width='600' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -556,7 +556,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_loss.jpg\" height='400' width='600' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Matematicas/Imagenes/mod_loss.jpg\" height='400' width='600' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -583,7 +583,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_machine-learning-map.png\" height='600' width='800' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Matematicas/Imagenes/mod_machine-learning-map.png\" height='600' width='800' />\n",
     "</center>\n",
     "</figure>\n",
     "\n",
